Update .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,4 +8,5 @@ build-etalert-backend:
   services:
     - docker:dind
   script:
+    - chmod +x build-docker-etalert-backend.sh
     - ./build-docker-etalert-backend.sh
