--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,11 +3,14 @@ stages:
 
 build-etalert-backend:
   stage: build
-  needs:
-    - job: etalert-backend
   image: docker:latest
   # when: manual
+  variables:
+    DOCKER_DRIVER: overlay2
+    DOCKER_HOST: tcp://docker:2375
+    DOCKER_TLS_CERTDIR: ""
   services:
     - docker:dind
   script:
+    - chmod +x build-docker-etalert-backend.sh
     - ./build-docker-etalert-backend.sh
