--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,6 +12,8 @@ build-etalert-backend:
   services:
     - docker:dind
   before_script:
+    - apk add --no-cache qemu-user-static
+    - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
     - docker buildx create --use
   script:
     - chmod +x build-docker-etalert-backend.sh
