--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,7 @@ build-etalert-backend:
   services:
     - docker:dind
   before_script:
-    - apk add --no-cache qemu-user-static
-    - docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+    - docker run --rm --privileged tonistiigi/binfmt --install all
     - docker buildx create --use
   script:
     - chmod +x build-docker-etalert-backend.sh
