update: .gitlab-ci.yml file

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ build-etalert-backend:
   before_script:
     - docker run --rm --privileged tonistiigi/binfmt --install all
     - docker buildx create --use
+    - apk add --no-cache perl perl-term-readline
   script:
     - chmod +x build-docker-etalert-backend.sh
     - ./build-docker-etalert-backend.sh
